--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <title>OpenAI Quickstart</title>
+  <title>Project</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
 </head>
 
 <body>
-  <h1>Get picture</h1>
+  <h1>Profile Picture Generator</h1>
   <form action="/" method="post">
-    <input type="text" name="text" placeholder="Describe image" required />
+    <input type="text" name="text" placeholder="Describe PFP" required />
     <input type="submit" value="Get Image" />
   </form>
   
