--- a/Dumbhead/style.css
+++ b/Dumbhead/style.css
@@ -43,6 +43,6 @@ li{
     display: inline-block;
     word-break: break-all;
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid brown;
 }
 
