--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-ul{
-    list-style-type: none;
-}
-
-li{
-    text-align: center;
-    border: 3px solid black;
-    padding: 5px;
-    margin: 10px;
-}
-
 .title{
     text-align: center;
     font-size: 100px;
@@ -30,3 +19,30 @@ li{
     width: 800;
     height: 50px;
 }
+
+
+/*tags*/
+
+#interestsTags{
+    border: 3px solid green;
+    padding: 5px;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+ul{
+    list-style-type: none;
+    border: 2px solid purple;
+
+    width: 800px;
+}
+
+li{
+    display: inline-block;
+    word-break: break-all;
+    text-align: center;
+    border: 1px solid black;
+}
+
